# Cargo.toml
[package]
name = "bingry_blockchain"
version = "0.1.0"
edition = "2024"

# 라이브러리 정의
[lib]
name = "bingry_blockchain_lib" # 라이브러리 이름 (패키지 이름과 다르게 지정 가능)
path = "src/lib.rs"

# 바이너리 정의 (client)
[[bin]]
name = "client"
path = "src/bin/client.rs"

# 바이너리 정의 (main - 서버)
[[bin]]
name = "server" # main.rs를 server 바이너리로 명시
path = "src/main.rs"


[dependencies]
sha256 = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
k256 = { version = "0.13.0", features = ["ecdsa", "arithmetic", "serde"] }
ecdsa = { version = "0.16", features = ["signing", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
hex = "0.4.3"
sha2 = "0.10"
digest = "0.10"
generic-array = "0.14.7"
typenum = "1.17.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 로컬 라이브러리 크레이트를 명시적으로 의존성에 추가
#bingry_blockchain_lib = { path = "src/lib.rs" }
